2007-03-19  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: recognize 10.4.9

2007-03-19  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Fix error msg if using new_with_properties
	* SelfUpdate.pm: Fix parsing of VERSION SelfUpdate token

2007-03-19  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Use SelfUpdate's API to get VERSION timestamp when
	determining if selfupdate is "old".
	* FinkVersion.pm.in: Revert use of SU's interface to avoid
	needing require() on SelfUpdate (circular mess)
	* Config.pm: Check SU directly before calling FV distribution
	version-check function

2007-03-19  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Add fink.conf:Distribution to 'fink -V' output.
	* FinkVersion.pm.in: Try asking SelfUpdate about package-distro
	versioning, which would add selfupdate method and timestamp data
	to 'fink -V' output.
	* SelfUpdate.pm, SelfUpdate/rsync.pm: Unified and overhauled
	handling of %p/fink/$dist/VERSION file (now includes timestamp).

2007-03-09  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Auto-detect all available subclasses
	* SelfUpdate/Base.pm: Add method_name and desc_short to public API
	* SelfUpdate.pm, SelfUpdate/*: Use each method's own descriptions

2007-03-08  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm, SelfUpdate/CVS.pm: Offload cvs stuff into its own
	class

2007-03-08  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/Base.pm: add system_check to public API
	* SelfUpdate.pm, SelfUpdate/*: let each method handle its own
	system sanity-checking; nuke &SU::need_devtools

2007-03-08  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: completely redo check(), removing most
	special-case method tests
	* SelfUpdate.pm, SelfUpdate/*: remove all cross-method interactions

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm, SelfUpdate/*: clean up imports from other pkgs

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/Base.pm: add do_direct to public API